# 123123123

./: .dockerignore  .env  .gitignore  Dockerfile  pyproject.toml  run.ps1  run.sh
app/: bot_manager.py  main.py
app/cogs/: DynamicConfig.py  Main.py
app/cogs/WebAPI/: Models.py  WebBase.py
app/data/json/: bot_properties.json  dyn_conf.json  factory.json  logger_conf.json
app/factory/: errors.py
app/utils/: crypter.py  logger.py  smartdisnake.py  ujson.py  urcon.py
app/utils/DB/: db_data_types.py  dbmanager.py
