[project]
name = "bot-factory"
version = "0.1.0"
description = ""
authors = [
    {name = "Pyth",email = "pymes@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "disnake (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "json5 (>=0.12.0,<0.13.0)",
    "quart (>=0.20.0,<0.21.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
